# OntoCMS-public

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  ONTO144-INTEGRATION.md  PATENT-COVENANT.md  README.md  ontoCMS-onto144-integration.patch
deployment/docker/: ontocms-runtime.sh  ontocms-runtime.txt
deployment/k8s/: Chart.yaml
deployment/k8s/templates/: _helpers.tpl  deployment.yaml
deployment/systemd/: ontocms-agent-service.txt  ontocms-agent.service
docs/: AENGA-MANIFESTO.md  INTEGRATION-GUIDE.md  ONTO-144-ARCH.md  SGRL-ALPHA.md  SPECIFICATION.md  THREE-LAWS.md
examples/: Cargo.toml
examples/agent-scout/: main.rs
examples/github-integration/: main.rs
examples/gold-email-bridge/: main.rs
legal/: aenga.md  cla-entity.md  cla-individual.md  sgcl.md  sgcl.txt
scripts/ci/: ontoci.yml
scripts/ontocli/: Cargo.toml
scripts/ontocli/src/: commit.rs  main.rs  scan.rs  validate.rs
src/core/: activity_ledger.rs  local_mirror.rs  phase_engine.rs  public_hub.rs
src/ethics/: law1_attribution.rs  law2_tracing.rs  law3_harm_witness.rs
src/forms/: invariant_registry.rs
src/onto144_bridge/: energy_adapter.rs  profile_loader.rs  sgcl_parser.rs
src/ontocoder/: license_registry.rs  lsp_server.rs  validator.rs
src/transport/: darwin_core.rs  w3c_did.rs  yandex_meta.rs
src/transport/simd_optim/: avx2.rs  mod.rs  neon.rs
