```toml
[package]
name = "ontocms-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ontocms = { path = "../.." }
serde = { version = "1.0", features = ["json"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7", "js"] }
chrono = "0.4"
lettre = "0.11"          # только для email-примера
tokio = { version = "1.0", features = ["full"] }  # если нужен async

[features]
default = []
yandex-transport = ["ontocms/yandex-transport"]
```