```toml
[package]
name = "ontocli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Локальные зависимости ontoCMS
ontocms-core = { path = "../../src/core" }
ontocms-ontocoder = { path = "../../src/ontocoder" }
ontocms-forms = { path = "../../src/forms" }
ontocms-ethics = { path = "../../src/ethics" }
```